Guardar cambios recientes